Fri Jun  4 14:05:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/idl/ccm_dds.idl:
        * connectors/dds4ccm/impl/dds/Reader_T.h:
        * connectors/dds4ccm/impl/dds/Reader_T.cpp:
        * connectors/dds4ccm/tests/ContentFilteredTopic/CFTNamesClash/Component/CFT_Test_Component_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Receiver/QCLE_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/ReadGet/Receiver/ReadGet_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/StateListener/Receiver/QCLS_Test_Receiver_exec.cpp:
          Renamed filter into query.

Fri Jun  4 13:02:28 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/DynAny_Handler/DynStruct_Handler.cpp:

          Improved logging.

        * DAnCE/docs/schema/Basic_Deployment_Data.xsd:

          Layout change.

        * examples/Hello/Sender/Sender.idl:
        * examples/Hello/Sender/Sender_exec.h:
        * examples/Hello/Sender/Sender_exec.cpp:
        * examples/Hello/descriptors/DeploymentPlan.cdp:
        * examples/Hello/descriptors/DeploymentPlan_without_ns.cdp:
        * examples/Hello/descriptors/PlanLocality_DifferentProcesses.cdp:
        * examples/Hello/descriptors/PlanLocality_SameProcess.cdp:

          Added sequence and struct attributes.

Fri Jun  4 12:30:41 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/EventListener/Base/QCLE_Test_Base.idl:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Base/QCLE_Test_Base.mpc:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Connector/QCLE_Test_Connector.idl:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Connector/QCLE_Test_Connector.mpc:
        * connectors/dds4ccm/tests/QueryCondition/EventListener/Receiver/QCLE_Test_Receiver.idl: